# isla

./: .gitignore  README.md  pyproject.toml  todo.md
isla/: __init__.py  core.py  linalg.py  props.py
tests/: __init__.py  test_linalg.py  test_ndarray.py  test_props.py
