[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isla"
version = "0.1.0"
description = "Interval Linear Algebra"
authors = [{name = "Muhammad Maaz", email = "m.maaz@mail.utoronto.ca"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
test = ["pytest"]